# crypto-tg-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api.rst  architecture.md  conf.py  contributors.md  dev_log.md  domain.md  index.rst  overview.md  requirements.txt
docs/diagrams/: sequence.drawio  use_case.drawio
src/: config.py
src/analytics/: README_PACKAGE.md  __init__.py  analyzer.py
src/bot/: bot_main.py  handlers.py  keyboards.py  messages.py
src/data_collector/: collector.py
src/database/: db_manager.py  schema.py  seed.py
tests/: conftest.py  test_analyzer.py  test_bot_callbacks.py  test_bot_views.py  test_collector_notifications.py  test_collector_pipeline.py  test_db_manager.py  test_schema_seed.py
