[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analytics"
version = "1.0.0"
description = "Модуль расчёта волатильности и рыночных аномалий для криптовалют"
readme = "README.md"
authors = [
    { name = "Anton", email = "anton@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["analytics*"]